# abiword

plugins/grammar/: Makefile.am  plugin.m4
plugins/grammar/patronuswrap/: Makefile.am  PatronusWrap.cpp  PatronusWrap.h
plugins/grammar/xp/: AbiGrammar.cpp  AbiGrammarCheck.cpp  AbiGrammarCheck.h
